[package]
name = "aya-ebpf-test-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf-test-common = { path = "../aya-ebpf-test-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "aya-ebpf-test"
path = "src/main.rs"
